--- a/Codes/index.html
+++ b/Codes/index.html
@@ -47,17 +47,44 @@
 
                 <div class="hero-panel" aria-hidden="true">
                     <div class="hero-card">
-                        <h2>Starter Bundle</h2>
-                        <p>Notebook set, lamp, hydration bottle, and cable kit designed for first-year success.</p>
+                        <h2>Study Launch Kit</h2>
+                        <p>Notebook trio, cable organizer, and habit tracker so your first week stays focused.</p>
                         <div class="hero-price">
                             <span class="label">Launch price</span>
-                            <span class="amount">$79.00</span>
+                            <span class="amount">$64.00</span>
                         </div>
-                        <a class="link-arrow" href="products.html">See full bundle</a>
+                        <a class="link-arrow" href="products.html">See other products</a>
                     </div>
                     <div class="hero-note">
                         <p>Faculty-approved materials sourced from local suppliers to keep costs predictable all semester.</p>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        
+        <!-- Image Gallery -->
+        <section class="image-gallery">
+            <div class="container">
+                <div class="section-heading">
+                    <p class="eyebrow">Campus inspiration</p>
+                    <h2>Your study space, reimagined</h2>
+                </div>
+                <div class="gallery-grid">
+                    <article class="gallery-item">
+                        <img src="../Assets/bookstostudy.jpg" alt="Books and study materials arranged on desk" loading="lazy">
+                        <div class="gallery-caption">
+                            <h3>Organized Study Setup</h3>
+                            <p>Create your perfect learning environment with the right tools and materials</p>
+                        </div>
+                    </article>
+                    <article class="gallery-item">
+                        <img src="../Assets/collegesetup.jpg" alt="Complete college desk setup with laptop and accessories" loading="lazy">
+                        <div class="gallery-caption">
+                            <h3>Complete College Workspace</h3>
+                            <p>Everything you need for productive study sessions and online classes</p>
+                        </div>
+                    </article>
                 </div>
             </div>
         </section>
@@ -121,6 +148,7 @@
                 </div>
             </div>
         </section>
+
 
         <!-- Call to action section -->
         <section class="cta-band">
