removed codes folder

--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Login | Campus Thrive Supply Co.</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body data-page="login">
     <header class="site-header">
@@ -74,6 +74,6 @@
         </div>
     </footer>
 
-    <script src="../script.js" defer></script>
+    <script src="script.js"></script>
 </body>
 </html>
