--- a/products.html
+++ b/products.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Catalog | Campus Thrive Supply Co.</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body data-page="products">
     <!-- Nav Section -->
@@ -69,7 +69,7 @@
                 <div class="products-grid" id="productsGrid">
                     <article class="product-card" data-id="planner-pack">
                         <div class="product-thumb">
-                            <img src="../Assets/stickynotes.jpg"></img>
+                            <img src="Assets/stickynotes.jpg"></img>
                         </div>
                         <div class="product-content">
                             <h3>Planner Pack</h3>
@@ -87,7 +87,7 @@
 
                     <article class="product-card" data-id="study-kit">
                         <div class="product-thumb">
-                            <img src="../Assets/stickynotes.jpg" alt="Study Launch Kit">
+                            <img src="Assets/stickynotes.jpg" alt="Study Launch Kit">
                         </div>
                         <div class="product-content">
                             <h3>Study Launch Kit</h3>
@@ -105,7 +105,7 @@
 
                     <article class="product-card" data-id="desk-lamp">
                         <div class="product-thumb">
-                            <img src="../Assets/desklamp.jpg" alt="Adjustable Desk Lamp">
+                            <img src="Assets/desklamp.jpg" alt="Adjustable Desk Lamp">
                         </div>
                         <div class="product-content">
                             <h3>Adjustable Desk Lamp</h3>
@@ -123,7 +123,7 @@
 
                     <article class="product-card" data-id="commuter-pack">
                         <div class="product-thumb">
-                            <img src="../Assets/headphones.jpg" alt="Commuter Pack">
+                            <img src="Assets/headphones.jpg" alt="Commuter Pack">
                         </div>
                         <div class="product-content">
                             <h3>Commuter Pack</h3>
@@ -141,7 +141,7 @@
 
                     <article class="product-card" data-id="steel-bottle">
                         <div class="product-thumb">
-                            <img src="../Assets/waterbottle.jpeg" alt="Insulated Steel Bottle">
+                            <img src="Assets/waterbottle.jpeg" alt="Insulated Steel Bottle">
                         </div>
                         <div class="product-content">
                             <h3>Insulated Steel Bottle</h3>
@@ -159,7 +159,7 @@
 
                     <article class="product-card" data-id="wireless-mouse">
                         <div class="product-thumb">
-                            <img src="../Assets/wirelessmouse.jpg" alt="Wireless Study Mouse">
+                            <img src="Assets/wirelessmouse.jpg" alt="Wireless Study Mouse">
                         </div>
                         <div class="product-content">
                             <h3>Wireless Study Mouse</h3>
@@ -177,7 +177,7 @@
 
                     <article class="product-card" data-id="wellness-bundle">
                         <div class="product-thumb">
-                            <img src="../Assets/bands.jpg" alt="Wellness Break Bundle">
+                            <img src="Assets/bands.jpg" alt="Wellness Break Bundle">
                         </div>
                         <div class="product-content">
                             <h3>Wellness Break Bundle</h3>
@@ -195,7 +195,7 @@
 
                     <article class="product-card" data-id="tech-refresh">
                         <div class="product-thumb">
-                            <img src="../Assets/usb_drive.jpg" alt="Tech Refresh Kit">
+                            <img src="Assets/usb_drive.jpg" alt="Tech Refresh Kit">
                         </div>
                         <div class="product-content">
                             <h3>Tech Refresh Kit</h3>
@@ -248,6 +248,6 @@
         </div>
     </footer>
 
-    <script src="../script.js" defer></script>
+    <script src="script.js"></script>
 </body>
 </html>
