--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us | Campus Thrive Supply Co.</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body data-page="about">
     <!-- Nav Section -->
@@ -76,6 +76,6 @@
         </div>
     </footer>
 
-    <script src="../script.js" defer></script>
+    <script src="script.js"></script>
 </body>
 </html>
