--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campus Thrive Supply Co.</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body data-page="home">
@@ -72,14 +72,14 @@
                 </div>
                 <div class="gallery-grid">
                     <article class="gallery-item">
-                        <img src="../Assets/bookstostudy.jpg" alt="Books and study materials arranged on desk" loading="lazy">
+                        <img src="Assets/bookstostudy.jpg" alt="Books and study materials arranged on desk" loading="lazy">
                         <div class="gallery-caption">
                             <h3>Organized Study Setup</h3>
                             <p>Create your perfect learning environment with the right tools and materials</p>
                         </div>
                     </article>
                     <article class="gallery-item">
-                        <img src="../Assets/collegesetup.jpg" alt="Complete college desk setup with laptop and accessories" loading="lazy">
+                        <img src="Assets/collegesetup.jpg" alt="Complete college desk setup with laptop and accessories" loading="lazy">
                         <div class="gallery-caption">
                             <h3>Complete College Workspace</h3>
                             <p>Everything you need for productive study sessions and online classes</p>
@@ -122,7 +122,7 @@
                 </div>
                 <div class="card-grid three-up">
                     <article class="product-highlight">
-                        <img src="../Assets/stickynotes.jpg" alt="Study kit with notebooks and organizer" loading="lazy">
+                        <img src="Assets/stickynotes.jpg" alt="Study kit with notebooks and organizer" loading="lazy">
                         <div>
                             <h3>Study Launch Kit</h3>
                             <p>Everything needed for the first project sprint, including planning pads and cable ties.</p>
@@ -130,7 +130,7 @@
                         </div>
                     </article>
                     <article class="product-highlight">
-                        <img src="../Assets/desklamp.jpg" alt="LED desk lamp" loading="lazy">
+                        <img src="Assets/desklamp.jpg" alt="LED desk lamp" loading="lazy">
                         <div>
                             <h3>Adjustable Desk Lamp</h3>
                             <p>USB-powered lamp with three color temperatures designed for long reading sessions.</p>
@@ -138,7 +138,7 @@
                         </div>
                     </article>
                     <article class="product-highlight">
-                        <img src="../Assets/waterbottle.jpeg" alt="Insulated steel bottle" loading="lazy">
+                        <img src="Assets/waterbottle.jpeg" alt="Insulated steel bottle" loading="lazy">
                         <div>
                             <h3>Insulated Bottle</h3>
                             <p>Steel bottle keeps drinks cold for 18 hours and fits every backpack side pocket.</p>
@@ -172,6 +172,6 @@
         </div>
     </footer>
 
-    <script src="../script.js" defer></script>
+    <script src="script.js"></script>
 </body>
 </html>
