updated logo and code

--- a/cart.html
+++ b/cart.html
@@ -10,7 +10,7 @@
     <header class="site-header">
         <div class="container header-inner">
             <div class="brand-mark">
-                <span class="brand-title">Campus Thrive Supply Co.</span>
+                <img src="Assets/logo_no_background.png" alt="Campus Thrive Supply Co." class="brand-logo">
             </div>
             <nav class="primary-nav" aria-label="Main navigation">
                 <button class="nav-toggle" id="navToggle" aria-expanded="false" aria-controls="navMenu">Menu</button>
