--- a/login.html
+++ b/login.html
@@ -12,8 +12,7 @@
     <header class="site-header">
         <div class="container header-inner">
             <div class="brand-mark">
-                <span class="brand-title">Campus Thrive Supply Co.</span>
-                <span class="brand-subtitle">Study-ready essentials for students</span>
+                <img src="Assets/logo_no_background.png" alt="Campus Thrive Supply Co." class="brand-logo">
             </div>
             <nav class="primary-nav" aria-label="Main navigation">
                 <button class="nav-toggle" id="navToggle" aria-expanded="false" aria-controls="navMenu">Menu</button>
